more companies are added

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
               <div class="reference"><a href="#"><img src="img/echo.jpeg" alt="" class="img-fluid">
                   <div class="overlay">
                     <div class="inner">
-                      <h3 class="h4 reference-title">Echo Energy</h3>
+                      <h3 class="h4 reference-title">Echo Energy . OKC . OK</h3>
                       <p>Multiple Projects</p>
                     </div>
                   </div>
@@ -259,7 +259,7 @@
               <div class="reference"><a href="#"><img src="img/gs.png" alt="" class="img-fluid">
                   <div class="overlay">
                     <div class="inner">
-                      <h3 class="h4 reference-title">Goldman Sachs</h3>
+                      <h3 class="h4 reference-title">Goldman Sachs . Jersey City . New Jersey</h3>
                       <p>Social Networking Site</p>
                     </div>
                   </div>
@@ -280,7 +280,7 @@
               <div class="reference"><a href="#"><img src="img/att.png" alt="" class="img-fluid">
                   <div class="overlay">
                     <div class="inner">
-                      <h3 class="h4 reference-title">ATT & T</h3>
+                      <h3 class="h4 reference-title">ATT & T Seattle WI  and Middletown , New Jersey</h3>
                       <p>E-Commerse Web App</p>
                     </div>
                   </div>
@@ -302,8 +302,72 @@
               <div class="reference"><a href="#"><img src="img/devon-logo.png" alt="" class="img-fluid">
                   <div class="overlay">
                     <div class="inner">
-                      <h3 class="h4 reference-title">Devon Energy</h3>
+                      <h3 class="h4 reference-title">Devon Energy . OKC . Michigan </h3>
                       <p>Developed Web App for searching documents and Field Data Capture API</p>
+                    </div>
+                  </div>
+                </a>
+                <div data-images="" class="sr-only reference-description">
+                  <p> Developed a web application using AngularJS, Solar, Java JAX-RS</p>
+                  <p> Developed RESTFul API using Java for Mobile application to capture Field Data </p>
+                </div>
+              </div>
+            </div>
+
+            <div data-category="seo" class="reference-item col-lg-3 col-md-6">
+              <div class="reference"><a href="#"><img src="img/toyota-tsusho.png" alt="" class="img-fluid">
+                  <div class="overlay">
+                    <div class="inner">
+                      <h3 class="h4 reference-title">Toyota . Novi . Michigan </h3>
+                      <p>Developed Web App for searching documents and Field Data Capture API</p>
+                    </div>
+                  </div>
+                </a>
+                <div data-images="" class="sr-only reference-description">
+                  <p> Developed a web application using AngularJS, Solar, Java JAX-RS</p>
+                  <p> Developed RESTFul API using Java for Mobile application to capture Field Data </p>
+                </div>
+              </div>
+            </div>
+
+            <div data-category="seo" class="reference-item col-lg-3 col-md-6">
+              <div class="reference"><a href="#"><img src="img/tata.png" alt="" class="img-fluid">
+                  <div class="overlay">
+                    <div class="inner">
+                      <h3 class="h4 reference-title">TCS .  Client:EMC2 . Bangalore . India</h3>
+                      <p>Developed Web App for searching documents and Field Data Capture API</p>
+                    </div>
+                  </div>
+                </a>
+                <div data-images="" class="sr-only reference-description">
+                  <p> Developed a web application using AngularJS, Solar, Java JAX-RS</p>
+                  <p> Developed RESTFul API using Java for Mobile application to capture Field Data </p>
+                </div>
+              </div>
+            </div>
+
+            <div data-category="seo" class="reference-item col-lg-3 col-md-6">
+              <div class="reference"><a href="#"><img src="img/Wipro-Logo-w88X70h-Px.png" alt="" class="img-fluid">
+                  <div class="overlay">
+                    <div class="inner">
+                      <h3 class="h4 reference-title">Wipro Technologies .  Client: Ciena . Bangalore . India</h3>
+                      <p>Maintained a product that works with SONET and SDH</p>
+                    </div>
+                  </div>
+                </a>
+                <div data-images="" class="sr-only reference-description">
+                  <p> Developed a web application using AngularJS, Solar, Java JAX-RS</p>
+                  <p> Developed RESTFul API using Java for Mobile application to capture Field Data </p>
+                </div>
+              </div>
+            </div>
+
+            <div data-category="seo" class="reference-item col-lg-3 col-md-6">
+              <div class="reference"><a href="#"><img src="img/rcs.png" alt="" class="img-fluid">
+                  <div class="overlay">
+                    <div class="inner">
+                      <h3 class="h4 reference-title"> Wipro Technologies .  Client: Ciena . Bangalore . India</h3>
+                      <p>Maintained a product that works with SONET and SDH</p>
                     </div>
                   </div>
                 </a>
