--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
               </div>
             </div>
             <div data-category="marketing" class="reference-item col-lg-3 col-md-6">
-              <div class="reference"><a href="#"><img src="img/mbo-logo@2x.png" alt="" class="img-fluid">
+              <div class="reference"><a href="#"><img src="img/mbo.png" alt="" class="img-fluid">
                   <div class="overlay">
                     <div class="inner">
                       <h3 class="h4 reference-title">MBO Partners . Edmond . OK</h3>
@@ -316,7 +316,7 @@
               </div>
             </div>
             <div data-category="other" class="reference-item col-lg-3 col-md-6">
-              <div class="reference"><a href="#"><img src="img/gs.png" alt="" class="img-fluid">
+              <div class="reference"><a href="#"><img src="img/goldman.png" alt="" class="img-fluid">
                   <div class="overlay">
                     <div class="inner">
                       <h3 class="h4 reference-title">Goldman Sachs . Jersey City . New Jersey</h3>
@@ -354,7 +354,7 @@
             </div>
 
             <div data-category="seo" class="reference-item col-lg-3 col-md-6">
-              <div class="reference"><a href="#"><img src="img/devon-logo.png" alt="" class="img-fluid">
+              <div class="reference"><a href="#"><img src="img/devon.png" alt="" class="img-fluid">
                   <div class="overlay">
                     <div class="inner">
                       <h3 class="h4 reference-title">Devon Energy . OKC . Michigan </h3>
@@ -381,7 +381,7 @@
             </div>
 
             <div data-category="other" class="reference-item col-lg-3 col-md-6">
-              <div class="reference"><a href="#"><img src="img/toyota-tsusho.png" alt="" class="img-fluid">
+              <div class="reference"><a href="#"><img src="img/toyota.png" alt="" class="img-fluid">
                   <div class="overlay">
                     <div class="inner">
                       <h3 class="h4 reference-title">Toyota . Novi . Michigan </h3>
@@ -431,7 +431,7 @@
             </div>
 
             <div data-category="other" class="reference-item col-lg-3 col-md-6">
-              <div class="reference"><a href="#"><img src="img/Wipro-Logo-w88X70h-Px.png" alt="" class="img-fluid">
+              <div class="reference"><a href="#"><img src="img/wipro.png" alt="" class="img-fluid">
                   <div class="overlay">
                     <div class="inner">
                       <h3 class="h4 reference-title">Wipro Technologies . Client: Ciena . Bangalore . India</h3>
@@ -533,17 +533,27 @@
           <!-- Technologies -->
           <div class="container">
             <div class="row">
+             
               <div class="col-lg-6 text-center">
-                <p> Master Of Science</p>
-                <p> Computer Science And Information System</p>
-                <p> Univercity Of Michigan</p>
-                <p> September 2012 - May 2014 </p>
+                <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title">University of Michigan </h5>
+                      <p> Master Of Science </p>
+                      <p> Computer Science and Information System </p>
+                      <p>September 2012- May- 2014 </p>
+                  </div>
+                </div>
               </div>
+
               <div class="col-lg-6 text-center">
-                <p> Bachelor of Technology </p>
-                <p> Electronics and Telecommunication Engineering </p>
-                <p> Biju Patnaik University of Technology </p>
-                <p> September 2001 - April 2005 </p>
+                  <div class="card">
+                    <div class="card-body">
+                      <h5 class="card-title">Biju Patnaik University of Technology</h5>
+                        <p>Bachelor of Technology </p>
+                        <p>Electronics and Telecommunication Engineering</p>
+                        <p>September 2001 - April 2005 </p>
+                    </div>
+                  </div>
               </div>
             </div>
           </div>
